--- a/views/emails/register.handlebars
+++ b/views/emails/register.handlebars
@@ -598,9 +598,9 @@
                         
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
                         
-                            <span style="font-size:13px"><span style="font-family:arial,helvetica neue,helvetica,sans-serif">¡Está a un paso de habilitar tu Pasaporte Digital de Cura Brochero!</span></span>
+                            <span style="font-size:13px"><span style="font-family:arial,helvetica neue,helvetica,sans-serif">¡Estás a un paso de habilitar tu Pasaporte Digital de Cura Brochero!</span></span>
 
-<p><span style="font-size:13px"><span style="font-family:arial,helvetica neue,helvetica,sans-serif">Necesitamos confirmar su dirección de correo electrónico, haga clic en el siguiente enlace para terminar de crear su cuenta . Si ud. no realizó este cambio desestime este envío&nbsp;</span></span></p>
+<p><span style="font-size:13px"><span style="font-family:arial,helvetica neue,helvetica,sans-serif">Necesitamos confirmar tu dirección de correo electrónico, haga clic en el siguiente enlace para terminar de crear tu cuenta: </span></span></p>
 
                         </td>
                     </tr>
